templates/multi-pod.yaml
apiVersion: v1
kind: Pod

metadata:
  name: nginx-pod

spec:
  containers:
    - name: nginx-container
      image: nginx
      ports:
        - containerPort: 80
  
  containers:
    - name: mongo-container
      image: mongo
      ports:
        - containerPort: 27017
