templates/pod.yaml
apiVersion: v1
kind: Pod

metadata:
  name: my-pod

spec:
  containers:
    - name: retail
      image: suyashrokade78/ghee:v1.0.2
      ports:
        - containerPort: 5656
