templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: nginx
  labels:
    first: app

spec:
  replicas: 3

  selector:
    matchLabels:
      app: web

  template:
    metadata:
      labels:
        app: web

    spec:
      containers:
        - name: nginx-container
          image: nginx
          ports:
            - containerPort: 80
---

apiVersion: v1
kind: Service

metadata:
  name: suyash-service1

spec:
  selector:
    app: web

  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

  type: LoadBalancer
