templates/deployment1.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: retail
  labels:
    first: app

spec:
  replicas: 3

  selector:
    matchLabels:
      app: web

  template:
    metadata:
      labels:
        app: web

    spec:
      containers:
        - name: retail-container
          image: suyashrokade78/retail:v1.0.0
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service

metadata:
  name: suyash-service2

spec:
  type: NodePort

  selector:
    app: web

  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30008
